// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsSupportPage should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Support
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <p
            class="el-has-grey-text el-small-text"
          >
            For AppMarket support, you will need to contact the app developer directly. You can find the relevant contact details by searching by app or developer name.
          </p>
          <p
            class="el-has-grey-text el-small-text"
          >
            In addition we have provided comprehensive documentation on using the AppMarket at the below link.
          </p>
          <button
            class="el-intent-neutral el-button"
          >
            View Docs
            <div
              class="el-button-loader"
            />
          </button>
        </aside>
        <section
          class="el-hfull el-page-container"
        >
          <div
            class="el-flex-align-center apps-search-container el-mb11 el-flex-container"
          >
            <span
              class="apps-search-input-icon el-icon"
              style="font-size: 1.25rem;"
            >
              <svg />
            </span>
            <input
              class="apps-search-input"
              placeholder="Search by App or Developer"
              type="text"
            />
          </div>
          <div
            class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
          >
            <div
              class="el-pn-icon"
              data-testid="close-icon"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </div>
            <div
              class="el-pn-content"
            >
              Search for an app or developer name to get support contact details
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Support
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <p
          class="el-has-grey-text el-small-text"
        >
          For AppMarket support, you will need to contact the app developer directly. You can find the relevant contact details by searching by app or developer name.
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          In addition we have provided comprehensive documentation on using the AppMarket at the below link.
        </p>
        <button
          class="el-intent-neutral el-button"
        >
          View Docs
          <div
            class="el-button-loader"
          />
        </button>
      </aside>
      <section
        class="el-hfull el-page-container"
      >
        <div
          class="el-flex-align-center apps-search-container el-mb11 el-flex-container"
        >
          <span
            class="apps-search-input-icon el-icon"
            style="font-size: 1.25rem;"
          >
            <svg />
          </span>
          <input
            class="apps-search-input"
            placeholder="Search by App or Developer"
            type="text"
          />
        </div>
        <div
          class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            Search for an app or developer name to get support contact details
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsSupportPage should match a snapshot when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Support
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <p
            class="el-has-grey-text el-small-text"
          >
            For AppMarket support, you will need to contact the app developer directly. You can find the relevant contact details by searching by app or developer name.
          </p>
          <p
            class="el-has-grey-text el-small-text"
          >
            In addition we have provided comprehensive documentation on using the AppMarket at the below link.
          </p>
          <button
            class="el-intent-neutral el-button"
          >
            View Docs
            <div
              class="el-button-loader"
            />
          </button>
        </aside>
        <section
          class="el-hfull el-page-container"
        >
          <div
            class="el-flex-align-center apps-search-container el-mb11 el-flex-container"
          >
            <span
              class="apps-search-input-icon el-icon"
              style="font-size: 1.25rem;"
            >
              <svg />
            </span>
            <input
              class="apps-search-input"
              placeholder="Search by App or Developer"
              type="text"
            />
          </div>
          <div
            class="el-loader-container"
          >
            <div
              class="el-loader"
            >
              <div
                class="el-loader-moving-bar"
              />
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Support
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <p
          class="el-has-grey-text el-small-text"
        >
          For AppMarket support, you will need to contact the app developer directly. You can find the relevant contact details by searching by app or developer name.
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          In addition we have provided comprehensive documentation on using the AppMarket at the below link.
        </p>
        <button
          class="el-intent-neutral el-button"
        >
          View Docs
          <div
            class="el-button-loader"
          />
        </button>
      </aside>
      <section
        class="el-hfull el-page-container"
      >
        <div
          class="el-flex-align-center apps-search-container el-mb11 el-flex-container"
        >
          <span
            class="apps-search-input-icon el-icon"
            style="font-size: 1.25rem;"
          >
            <svg />
          </span>
          <input
            class="apps-search-input"
            placeholder="Search by App or Developer"
            type="text"
          />
        </div>
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
